@@ -113,15 +113,17 @@ class ExposeInternals(Transform):
 
 class Messages(Transform):
 
-    """
-    Place any system messages generated after parsing into a dedicated section
-    of the document.
+    """Handle "loose" messages.
+
+    Place system messages generated by parsing or transforms that are not
+    attached to the document tree into a dedicated section of the document.
     """
 
     default_priority = 860
 
     def apply(self):
-        messages = self.document.transform_messages
+        messages = [*self.document.parse_messages,
+                    *self.document.transform_messages]
         loose_messages = [msg for msg in messages if not msg.parent]
         if loose_messages:
             section = nodes.section(classes=['system-messages'])
