@@ -55,6 +55,10 @@ Release 0.22b.dev (unpublished)
     follows a <meta> or <decoration> element as this is invalid
     according to ``docutils.dtd``.
 
+* docutils/transforms/universal.py
+
+  - `Messages` also handles "loose" system messages generated by the parser.
+
 * docutils/writers/manpage.py
 
   - Remove code for unused emdash bullets.
